Internal base64 Token is token))